--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,16 +1,21 @@
+@import "./config/colors";
 
 @import "./components/create-schedule.scss";
 @import "./components/palette.scss";
 
-
 /* global */
 
-body{
-    width: 1200px;
+body {
+  width: 1200px;
 }
 
-$colors : (red: red, blue: blue, green: green, yellow: yellow);
-
-@each $color, $value in $colors {
-    .#{$color} {background-color: $value;}
+@mixin mixin-color-palette($palette) {
+  @each $color, $value in $palette {
+    .#{$color} {
+      background-color: $value;
+    }
+  }
 }
+
+@include mixin-color-palette($colors);
+@include mixin-color-palette($reds);
