--- a/src/styles/components/create-schedule.scss
+++ b/src/styles/components/create-schedule.scss
@@ -1,3 +1,20 @@
-.form__container{
-    width: 100%;
+.create-schedule__container {
+  width: 100%;
+}
+
+.schedule-color__container {
+  position: relative;
+  width: 75px;
+  height: 75px;
+}
+.schedule-color {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+.color-changer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
