--- a/src/styles/components/palette.scss
+++ b/src/styles/components/palette.scss
@@ -1,11 +1,22 @@
 .palette__container {
+  width: 300px;
   position: relative;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
 }
-
+.colors__container {
+  width: 100px;
+  height: 720px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .color__container {
   width: 50px;
   height: 50px;
+  margin: 5px 0;
   border-radius: 10px;
 }
