feat: 소요 시간 입력의 기본 증감 버튼 삭제

--- a/src/styles/components/create-schedule.scss
+++ b/src/styles/components/create-schedule.scss
@@ -18,3 +18,9 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.time__input::-webkit-inner-spin-button {
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
